  - Fixed SF.net bug #1100805: Standard calling convention does not check
    whether function name is null.
  - Small style improvements.
  - Added constructor to class InvalidRequestException that only accepts a
    message and no cause exception.

* Generation of server-side Java code:
  - Fixed SF.net bug #1100792: Conflicting duplicate names for input param
    'ip'.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 1:

* XINS/Java Common Library:
  - Fixed SF.net bug #1099406: ProgrammingError should be RuntimeException.
    Replaced class ProgrammingError with class ProgrammingException and
    changed code accordingly.

* XINS/Java Client Framework:
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.

* XINS/Java Server Framework:
  - Fixed SF.net bug #1099473: Pattern for incoming parameters breaks
    compatibility. The change has been reverted. It is scheduled for
    re-introduction in XINS 2.0.0.
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.
  - Only the "_function" parameter is supported when using either the standard
    or the XML calling convention. The "function" parameter is treated as a
    normal parameter.
  - The XML is first generated on a StringWriter and its content is sent to
    the Servlet PrintWriter afterwards.
    Typical impact on performance: Small to Medium.

* Build and release process:
  - The Java2HTML pages are now uploaded in a TAR GZ file.

* Generated build file:
  - Improved the create-api and create-function targets.
  - The create-api target invokes the create-function target as APIs must have
    at least one function.

* Build and release process:
  - Added the target "tests-ui" to run the unit tests in a graphical
    environment.