@@ -1,0 +1,48 @@
+/*
+ * $Id$
+ */
+package org.xins.perftests;
+
+import junit.framework.Test;
+import junit.framework.TestSuite;
+
+/**
+ * Combination of all performance tests.
+ *
+ * @version $Revision$ $Date$
+ * @author Ernst de Haan (<a href="mailto:znerd@FreeBSD.org">znerd@FreeBSD.org</a>)
+ */
+public class AllTests extends TestSuite {
+
+   //-------------------------------------------------------------------------
+   // Class functions
+   //-------------------------------------------------------------------------
+
+   /**
+    * Returns a test suite with all test cases.
+    *
+    * @return
+    *    the test suite, never <code>null</code>.
+    */
+   public static Test suite() {
+      TestSuite suite = new TestSuite();
+      suite.addTestSuite(AllInOneTests.class);
+      return suite;
+   }
+
+
+   //-------------------------------------------------------------------------
+   // Constructor
+   //-------------------------------------------------------------------------
+
+   /**
+    * Constructs a new <code>AllTests</code> object with the specified name.
+    * The name will be passed to the superconstructor.
+    *
+    * @param name
+    *    the name for this test case.
+    */
+   public AllTests(String name) {
+      super(name);
+   }
+}
