@@ -1,0 +1,7 @@
+<html>
+<body>
+Performance tests for <code>XINS</code>.
+
+@since xmlenc 1.1.0-beta1
+</body>
+</html>
