@@ -30,6 +30,10 @@ CHANGES INTRODUCED IN XINS 1.1.0 BETA 2:
   - Fixed SF.net bug #1100792: Conflicting duplicate names for input param
     'ip'.
 
+* Tests:
+  - Added performance tests. Execute the "perftests" ant target to execute the
+    test.
+
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 1.1.0 BETA 1:
 
